Fix header links alignment

--- a/css/header.css
+++ b/css/header.css
@@ -2,12 +2,13 @@ header .inner-column {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-start;
 }
 
 .info-nav, .about-nav {
 	display: flex;
 	flex-direction: column;
+	gap: 15px;
 }
 
 header a {
@@ -19,6 +20,7 @@ header a {
 @media (min-width: 530px) {
 	header .inner-column {
 		justify-content: space-between;
+		align-items: center;
 	}
 
 	.info-nav, .about-nav {
